# sales-taxes-kata-python

./: .coveragerc  .gitignore  CHANGELOG  Dockerfile  Makefile  README.md  pyproject.toml
.chglog/: config.yml
.circleci/: config.yml
examples/: mixed-multi-quantity.txt  mixed-single-quantity.txt  new-products.txt  repeated-articles.txt  same-product-different-details.txt
features/: cli.feature
features/steps/: cli.py
src/taxes/: item.py  parser.py
src/taxes/adapters/: basket_service.py  product_repository.py  stdio.py
src/taxes/gateways/: cli.py
src/taxes/services/: parser.py
src/taxes/services/basket/: __init__.py  service.py  use_cases.py
src/taxes/services/basket/entities/: article.py  basket.py  product.py  purchased_item.py
src/taxes/services/receipt/: __init__.py  service.py  use_cases.py
src/taxes/services/receipt/entities/: article.py  (+5 more)
src/taxes/services/tax/: __init__.py  service.py  use_cases.py
test/: test_item.py  test_parser.py
test/e2e/: test_cli.py
test/services/: test_parser.py
test/services/basket/: test_service.py
test/services/basket/entities/: test_basket.py  test_product.py
test/services/basket/use_cases/: test_create_basket.py
test/services/receipt/: test_item.py  test_service.py
test/services/receipt/entities/: test_article.py  test_basket.py  test_product.py  test_receipt.py  test_tax.py
test/services/receipt/use_cases/: test_create_basket.py  test_create_receipt.py
test/services/tax/: test_service.py
test/services/tax/use_cases/: test_add_taxes.py
test/unit/: test_taxes.py
test/unit/services/: test_parser.py
test/unit/services/basket/: test_service.py
test/unit/services/receipt/: test_service.py
test/unit/services/tax/: test_service.py
(+16 files in other folders)
