[tool.poetry]
name = "taxes"
version = "0.0.0"
description = "Sales taxes kata, solved in Python."
repository = ""
authors = ["mechpig <7295856+mech-pig@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# ci
flake8 = { version = "^3.7", optional = true }
pytest = { version = "^5.3", optional = true }
pytest-cov = { version = "^2.8", optional = true }
pytest-mock = { version = "^2.0.0", optional = true }

[tool.poetry.dev-dependencies]
ipdb = "*"
python-language-server = { extras = ["all"], version = "^0.31.8" }
pytest-watch = "^4.2.0"

[tool.poetry.extras]
lint = [
  "flake8",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
